Fix button letter-spacing

--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ button {
     background-color: #fff;
     color: rgb(103, 75, 175);
     font-size: 1.8rem;
-    letter-spacing: .5px;
     padding: 1.7rem 6.4rem;
     border: none;
     border-radius: 50px;
